k8s/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: kooplex-veo
  name: kooplex-veo
