k8s/nfs_deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  generation: 1
  name: nfs-provisioner
  namespace: kooplex-veo
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: nfs-provisioner
  strategy:
    type: Recreate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nfs-provisioner
    spec:
      containers:
      - args:
        - -provisioner=example.com/nfs
        image: quay.io/embassycloud/nfs-provisioner
        imagePullPolicy: IfNotPresent
        name: nfs-provisioner
        ports:
        - containerPort: 2049
          name: nfs
          protocol: TCP
        - containerPort: 2049
          name: nfs-udp
          protocol: UDP
        - containerPort: 32803
          name: nlockmgr
          protocol: TCP
        - containerPort: 32803
          name: nlockmgr-udp
          protocol: UDP
        - containerPort: 20048
          name: mountd
          protocol: TCP
        - containerPort: 20048
          name: mountd-udp
          protocol: UDP
        - containerPort: 875
          name: rquotad
          protocol: TCP
        - containerPort: 875
          name: rquotad-udp
          protocol: UDP
        - containerPort: 111
          name: rpcbind
          protocol: TCP
        - containerPort: 111
          name: rpcbind-udp
          protocol: UDP
        - containerPort: 662
          name: statd
          protocol: TCP
        - containerPort: 662
          name: statd-udp
          protocol: UDP
        resources: {}
        securityContext:
          capabilities:
            add:
            - DAC_READ_SEARCH
            - SYS_RESOURCE
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /export
          name: export-volume
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: nfs-provisioner
      serviceAccountName: nfs-provisioner
      terminationGracePeriodSeconds: 30
      volumes:
      - name: export-volume
        persistentVolumeClaim:
          claimName: twenty-nfs
