k8s/shell.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: shell
  namespace: kooplex-veo
spec:
  podManagementPolicy: Parallel
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: shell
  serviceName: shell
  template:
    metadata:
      labels:
        app: shell
    spec:
      containers:
      - command:
        - sleep
        - infinity
        image: image-registry.vo.elte.hu/rstudio-363-ubuntu18-v4.0
        imagePullPolicy: Always
        name: postgres-shell
        resources:
          limits:
            memory: 14G
          requests:
            memory: 13G
        volumeMounts:
        - mountPath: /mnt/archive
          name: storage
          subPath: archive
        - mountPath: /mnt/scripts
          name: storage
          subPath: scripts
        - mountPath: /mnt/xfer
          name: storage
          subPath: xfer.tmp
      hostname: postgres-shell
      restartPolicy: Always
      volumes:
      - name: storage
        persistentVolumeClaim:
          claimName: twenty
