k8s/nfs_service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: nfs-provisioner
  name: nfs-provisioner
  namespace: kooplex-veo
spec:
  ports:
  - name: nfs
    port: 2049
    protocol: TCP
    targetPort: 2049
  - name: nfs-udp
    port: 2049
    protocol: UDP
    targetPort: 2049
  - name: nlockmgr
    port: 32803
    protocol: TCP
    targetPort: 32803
  - name: nlockmgr-udp
    port: 32803
    protocol: UDP
    targetPort: 32803
  - name: mountd
    port: 20048
    protocol: TCP
    targetPort: 20048
  - name: mountd-udp
    port: 20048
    protocol: UDP
    targetPort: 20048
  - name: rquotad
    port: 875
    protocol: TCP
    targetPort: 875
  - name: rquotad-udp
    port: 875
    protocol: UDP
    targetPort: 875
  - name: rpcbind
    port: 111
    protocol: TCP
    targetPort: 111
  - name: rpcbind-udp
    port: 111
    protocol: UDP
    targetPort: 111
  - name: statd
    port: 662
    protocol: TCP
    targetPort: 662
  - name: statd-udp
    port: 662
    protocol: UDP
    targetPort: 662
  selector:
    app: nfs-provisioner
  sessionAffinity: None
  type: ClusterIP
