k8s/report_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: report
  namespace: kooplex-veo
spec:
  ports:
  - name: http
    port: 3838
    protocol: TCP
    targetPort: 3838
  selector:
    app: app-report
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
